# CrawlerCPP

./: .gitignore  CMakeLists.txt  CrawlerCPP.code-workspace
config/: calib.cfg  crawler.def.cfg  log.cfg  server.cfg
cpp/: CMakeLists.txt
cpp/libs/libi2c/: i2c.cpp  i2c.h
cpp/src/: CrawlerCPP.cpp
cpp/src/app/: App.cpp  App.h  InfoPackets.cpp  InfoPackets.h  PacketsComm.cpp  PacketsComm.h  ServoThread.cpp  ServoThread.h
cpp/src/brain/: Brain.cpp  Brain.h  CalibrationBrain.cpp  CalibrationBrain.h  EmptyBrain.cpp  GaitBrain.cpp  GaitBrain.h  ModelBrain.cpp  ModelBrain.h  SurferBrain.cpp  SurferBrain.h  WalkerBrain.cpp  WalkerBrain.h
cpp/src/buffer/: ByteBufferReader.cpp  ByteBufferReader.h  ByteBufferWriter.cpp  ByteBufferWriter.h  SmartBuffer.cpp  SmartBuffer.h
cpp/src/comm/: I2CBus.cpp  I2CBus.h  SerialStream.cpp  SerialStream.h
cpp/src/core/: Config.cpp  Config.h  Log.cpp  Log.h  Time.cpp  Time.h
cpp/src/crawler/: Main.cpp  Main.h
cpp/src/debug/: Debug.h
cpp/src/events/: Event.cpp  Event.h  Event2.cpp  Event2.h  EventManager.cpp  EventManager.h
cpp/src/gait/: Gait.cpp  Gait.h  GaitFrame.cpp  GaitFrame.h
cpp/src/math/: Mathf.cpp  Mathf.h  Numbers.cpp  Numbers.h
cpp/src/parts/: DistanceSensor.cpp  DistanceSensor.h  HardwareButton.cpp  IMU.cpp  IMU.h  MonoLED.cpp  MuxI2C.cpp  MuxI2C.h  WeightSensor.cpp  WeightSensor.h  XYZServo.cpp  XYZServo.h
cpp/src/parts/HX711/: HX711.cpp  HX711.h
cpp/src/parts/ISM330DHXC/: ism330dhcx_reg.c  ism330dhcx_reg.h
cpp/src/parts/NAU7802/: NAU7802.cpp  NAU7802.h
cpp/src/parts/TCA9548A/: TCA9548A.cpp  TCA9548A.h
cpp/src/parts/VCNL4010/: VCNL4010.cpp  VCNL4010.h
cpp/src/remote/: Client.cpp  Client.h  ClientManager.cpp  ClientManager.h  GamepadKeys.cpp  GamepadKeys.h  Packet.cpp  Packet.h  PacketParser.cpp  PacketParser.h  PacketType.cpp  PacketType.h  SeasocksHandler.cpp  SeasocksHandler.h  SocketMessage.cpp  SocketMessage.h  SocketServer.cpp  SocketServer.h
cpp/src/robot/: Joint.cpp  Joint.h  Leg.cpp  Leg.h  Robot.cpp  Robot.h
cpp/src/threading/: Barrier.cpp  Barrier.h  BufferedValue.cpp  BufferedValue.h  Semaphore.cpp  Semaphore.h  Signal.cpp  Signal.h
cpp/src/util/: ByteBufferReader.cpp  ByteBufferReader.h  Endian.cpp  Endian.h  HardwareButton.cpp  HardwareButton.h  MonoLED.cpp  MonoLED.h  OnnxRunner.cpp  OnnxRunner.h  SmartBuffer.cpp  SmartBuffer.h  Timer.cpp  Timer.h
cpp/test/: TestBuffer.cpp  TestDistance.cpp  TestEigen.cpp  TestEvents.cpp  TestGait.cpp  TestI2C.cpp  TestIMU.cpp  TestModel.cpp  TestOnnxRunner.cpp  TestSerialCom.cpp  TestServer.cpp  TestThreading.cpp  TestWeight.cpp
onnx/: Crawler2.onnx  Crawler2.pth.onnx  Crawler2Simple.pth.onnx
python/: Kinematics.py  NewSearch.ipynb
web/: index.css  index.html  package-lock.json  package.json  webpack.config.js
web-old/: index.html
web-old/img/: icon-black.xcf
web-old/screen/: gamepad.js  home.css
web/old/: index.css  index.js
web/old/img/: icon.xcf
web/old/screen/: gamepad.js  home.html
web/public/: index.html
web/public/css/: msl.css
web/src/: index.js
web/src/components/: App.css  App.js  CalibComponent.css  CalibComponent.js  CalibJoint.css  CalibJoint.js  ConsoleComponent.css  ConsoleComponent.js  ConsoleInput.css  ConsoleInput.js  ConsoleLine.css  ConsoleLine.js  ConsoleViewport.css  ConsoleViewport.js  GamepadCanvas.js  GamepadComponent.css  GamepadComponent.js  Navbar.css  Navbar.js  NavbarButton.css  NavbarButton.js  Overview.css  Overview.js  Robo3DButton.css  Robo3DButton.js  Robo3DComponent.css  Robo3DComponent.js  Robot3D.js  StatusComponent.css  StatusComponent.js  StatusEntry.css  StatusEntry.js
web/src/logic/: Console.js  JointDataType.js  Main.js  PacketMessage.js  PacketTypes.js
web/src/logic/gamepad/: Gamepad.js  GamepadArrowButton.js  GamepadMainButton.js  GamepadMidButton.js  GamepadStick.js  GamepadTouchEffect.js
web/src/logic/robo3d/: Foot.js  Joint.js  Leg.js  Robo3D.js  Robot.js
web/src/msl/buffer/: DataType.js  DynamicBuffer.js
web/src/msl/gfw/: Camera.js  Canvas.js  CanvasThree.js  Gfw.js  Input.js
web/src/msl/log/: Log.js  LogTargetBase.js  LogTargetConsole.js
web/src/msl/remote/: Connection.js  Packet.js  PacketReceiver.js  PacketRecycler.js  PacketSender.js
web/src/msl/time/: DateTime.js  FrequencyUpdater.js  Time.js
web/src/msl/util/: Bitwise.js  CollisionDetection.js  Color.js  Fullscreen.js  Messenger.js  Monitor.js  Numbers.js  Strings.js  Subscribable.js  Vec2.js
