cmake_minimum_required(VERSION 3.16.3)

project (CrawlerCPP)

set(CRAWLER_ROOT_PATH "${CMAKE_CURRENT_SOURCE_DIR}")
set(CRAWLER_CONFIG_PATH "${CMAKE_CURRENT_SOURCE_DIR}/config")
set(CRAWLER_WEB_PATH "${CMAKE_CURRENT_SOURCE_DIR}/web/dist")
set(CRAWLER_ONNX_PATH "${CMAKE_CURRENT_SOURCE_DIR}/onnx")

add_definitions(
	-DCRAWLER_ROOT_PATH="${CRAWLER_ROOT_PATH}"
	-DCRAWLER_CONFIG_PATH="${CRAWLER_CONFIG_PATH}"
	-DCRAWLER_WEB_PATH="${CRAWLER_WEB_PATH}"
	-DCRAWLER_ONNX_PATH="${CRAWLER_ONNX_PATH}"
) 

add_subdirectory(cpp)

